----------------------------------------------------------------------
 OmegaT 3.1.6 update 1
----------------------------------------------------------------------
   5 Enhancements
   4 Bug fixes
   3 Localisation updates
----------------------------------------------------------------------
3.1.6 update 1 vs. 3.1.6

  Implemented requests:

  - Add the ability to commit updated segmentation.conf
  https://sourceforge.net/p/omegat/feature-requests/1004/

  - Accept UTF-16 text files for glossaries 
  https://sourceforge.net/p/omegat/feature-requests/644/

  - Allow scripts to run in console mode
  https://sourceforge.net/p/omegat/feature-requests/994/ 

  Other enhancements:

  - A new script (auto_open_last_project.groovy) allows opening automatically
the last open project

  - Suggest local directory for new team project based on repository URL

  Bug fixes:

  - Line length limit doesn't work on one line text files 
  https://sourceforge.net/p/omegat/bugs/707/

  - Scripts folder is not created in the source package 
  https://sourceforge.net/p/omegat/bugs/709/

  - TransTip doesn't highlight acronyms
  https://sourceforge.net/p/omegat/bugs/708/

  - Console-mode align doesn't load the project correctly and crashes
  https://sourceforge.net/p/omegat/bugs/711/

  Localisation updates:

  - Japanese localisation updated to 3.1.6 update 1 (UI, readme, documentation)
  - Italian localisation updated to 3.1.6 (UI, readme)
  - Dutch localisation updated to 3.1.6 (UI, readme, documentation)

----------------------------------------------------------------------
 OmegaT 3.1.6 (2014-09-10)
----------------------------------------------------------------------
   5 Enhancements
   8 Bug fixes
   3 Localisation update
----------------------------------------------------------------------
3.1.6 vs. 3.1.5

  Implemented requests:

  - Allow customising segment modification information 
  https://sourceforge.net/p/omegat/feature-requests/1022/
