@@ -13,7 +13,7 @@
 #               2012 Martin Fleurke, Wildrich Fourie, Didier Briel, Guido Leenders, Jean-Christophe Helary, 
 #                    Alex Buloichik
 #               2013 Aaron Madlon-Kay, Zoltan Bartko, Didier Briel
-#               2014 Aaron Madlon-Kay, Didier Briel, Piotr Kulik, Alex Buloichik
+#               2014 Aaron Madlon-Kay, Didier Briel, Piotr Kulik, Alex Buloichik, Briac Pilpre
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -49,6 +49,7 @@
 #  @author Briac Pilpre
 #  @author Aaron Madlon-Kay
 #  @author Piotr Kulik
+#  @author Briac Pilpre
 #
 #  @version 3.1
 #
@@ -1123,6 +1124,8 @@ OpenXML_TRANSLATE_FOOTNOTES=&Notes de bas de page
 OpenXML_TRANSLATE_ENDNOTES=Notes de &fin de document
 OpenXML_TRANSLATE_HEADERS=&En-t\u00eates
 OpenXML_TRANSLATE_FOOTERS=&Pieds de page
+# Duplicate text for compatibility with older versions of Word
+OpenXML_TRANSLATE_FALLBACK_TEXT=Texte de compatibilit\u00e9 dup&liqu\u00e9
 OpenXML_EXCEL=Excel
 OpenXML_TRANSLATE_EXCEL_COMMENTS=&Commentaires
 OpenXML_TRANSLATE_EXCEL_SHEET_NAMES=Nom des fe&uilles
